--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": "^7.4.2"
+        "php": "^7.4.2",
+        "filp/whoops": "^2.7"
     },
     "autoload": {
         "psr-4": {
