--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
     "minimum-stability": "stable",
     "require": {
         "php": "^7.4.2",
-        "filp/whoops": "^2.7"
+        "filp/whoops": "^2.7",
+        "rakit/validation": "^1.2",
+        "jenssegers/blade": "^1.3"
     },
     "autoload": {
         "psr-4": {
