--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,9 @@
         "psr-4": {
             "App\\": "app/",
             "Phplite\\": "phplite/src/"
-        }
+        },
+        "files" : [
+            "phplite/src/Helpers/helper.php"
+        ]
     }
 }
